Project

General

Profile

Actions

Bug #17609

closed

addr2line.c: wrong operand size of DW_LNS_fixed_advance_pc

Bug #17609: addr2line.c: wrong operand size of DW_LNS_fixed_advance_pc

Added by xtkoba (Tee KOBAYASHI) over 5 years ago. Updated about 5 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.0.0p0 (2020-12-25 revision 95aff21468) [riscv64-linux]
[ruby-core:102394]

Description

According to the standards, DW_LNS_fixed_advance_pc takes a single uhalf operand. A patch is attached to conform to them.

With this change, we can safely revert the commit 6985bfb72c8d7e7d94f1aad1f0902b602bbfa6da (vm_dump.c: Do not show C backtrace on riscv).


Files

ruby-addr2line-DW_LNS_fixed_advance_pc.patch (268 Bytes) ruby-addr2line-DW_LNS_fixed_advance_pc.patch Fix the operand size of DW_LNS_fixed_advance_pc xtkoba (Tee KOBAYASHI), 02/04/2021 07:48 AM
ruby-revert-commit-6985bfb72c8d7e7d94f1aad1f0902b602bbfa6da.patch (505 Bytes) ruby-revert-commit-6985bfb72c8d7e7d94f1aad1f0902b602bbfa6da.patch Revert commit 6985bfb72c8d7e7d94f1aad1f0902b602bbfa6da xtkoba (Tee KOBAYASHI), 02/04/2021 07:48 AM
Actions

Also available in: PDF Atom