addr2line.c: DW_LNS_fixed_advance_pc takes a single uhalf operand

Fixes [Bug #17609]

Co-Authored-By: xtkoba (Tee KOBAYASHI) <xtkoba+ruby@gmail.com>